working on responsive

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <div class="companies-hero-slider-contain video"><a href="#" class="hero-lightbox w-inline-block w-lightbox"><img
             src="https://cdn.prod.website-files.com/65159e844f8f08a72cefa2aa/6657825449e428b7c784bd54_Bg%20(2).png"
             loading="lazy"
-            sizes="(max-width: 479px) 91vw, (max-width: 990px) 80vw, (max-width: 1439px) 40vw, 761.9000244140625px"
+            sizes="(max-width: 479px) 100%, (max-width: 990px) 80vw, (max-width: 1439px) 40vw, 761.9000244140625px"
             srcset="https://cdn.prod.website-files.com/65159e844f8f08a72cefa2aa/6657825449e428b7c784bd54_Bg%20(2)-p-500.png 500w, https://cdn.prod.website-files.com/65159e844f8f08a72cefa2aa/6657825449e428b7c784bd54_Bg%20(2)-p-800.png 800w, https://cdn.prod.website-files.com/65159e844f8f08a72cefa2aa/6657825449e428b7c784bd54_Bg%20(2).png 1296w"
             alt="" class="image-100" />
           <!-- <img
@@ -246,8 +246,8 @@
           innovation and skill development converge seamlessly</p>
       </div>
       <div class="w-layout-grid requirement-cards-grid">
-        <div id="w-node-_1f148469-5976-13e7-5b61-753032ff2707-03403747" class="">
-          <h2 style="    font-size: 42px; line-height: 52px; text-align: left; color: #fff; font-weight: 600;">Where
+        <div id="w-node-_1f148469-5976-13e7-5b61-753032ff2707-03403747">
+          <h2 style="    font-size: 42px; line-height: 52px; text-align: left; color: #fff; font-weight: 600;" class="about-heading">Where
             Coding Meets Innovation</h2>
 
           <!-- <img
@@ -1050,7 +1050,7 @@
                   </div>
                 </div>
                 <div class="col-lg-2 text-center">
-                  <img src="assests/person.jpg" class="img-fluid testimonial-img" alt="bilal">
+                  <img src="assests/MCC alumni student/Bilal.jpeg" class="img-fluid testimonial-img" alt="bilal">
                 </div>
               </div>
             </div>
@@ -1077,7 +1077,7 @@
                   </div>
                 </div>
                 <div class="col-lg-2 text-center">
-                  <img src="assests/person.jpg" class="img-fluid testimonial-img" alt="">
+                  <img src="assests/MCC alumni student/Haris.jpeg" class="img-fluid testimonial-img" alt="">
                 </div>
               </div>
             </div>
